<?xml version="1.0"?>
<package>
  <name>hku_m100_gazebo</name>
  <version>0.0.0</version>
  <description>The hku_m100_gazebo package</description>

  <maintainer email="caochao39@gmail.com">Cao Chao</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dji_sdk</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dji_sdk</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_to_tf</run_depend>
  <run_depend>hector_gazebo_worlds</run_depend>

</package>
